5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1637_2704.log
== TEST (2019-04-08 16:01:10) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1: nota - ((10 * nota) / 100)

if (msg == S):
	total = total1
else:
	total
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (msg == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:02:15) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1: nota - ((10 * nota) / 100)

if (msg == S):
	total = total1
else:
	total
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (msg == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:02:40) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota - ((10 * nota) / 100)

if (msg == S):
	total = total1
else:
	total
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (msg == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:03:44) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota - ((10 * nota) / 100)

if (msg == S):
	total = total1
else:
	total
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (msg == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:04:06) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ").upper

total1 = nota - ((10 * nota) / 100)

if (msg == S):
	total = total1
else:
	total
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (msg == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:05:41) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota - ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:05:50) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota - ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- EXECUTION TIME:
0.114427
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
4.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
8.1
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:06:27) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ").upper

total1 = nota - ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:06:47) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota - ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:07:27) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota + ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:07:39) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota + ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- EXECUTION TIME:
0.164633
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:07:52) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota + ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:08:35) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota + ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else (msg == "N")
	total
	
print(total)
-- ERROR:
File "XXXX", line 9
    else (msg == "N")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:08:57) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

total1 = nota + ((10 * nota) / 100)

if (msg == "S"):
	total = total1
else:
	total
	
print(total)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:10:47) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

t1 = nota + ((10 * nota) / 100)

if (msg == "S"):
	nota = t1
else:
	nota
	
print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:10:57) 
-- CODE:
nota = float(input("Digite aqui a nota do aluno de 0 a 10: "))

msg = input("Digite se o aluno vai receber a bonificacao com S(sim) ou N(nao): ")

t1 = nota + ((10 * nota) / 100)

if (msg == "S"):
	nota = t1
else:
	nota
	
print(nota)
-- EXECUTION TIME:
0.104424
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
